@@ -1,3 +1,9 @@
+2002-06-30  Conrad Scott  <conrad.scott@dsl.pipex.com>
+
+	* cygserver_transport_sockets.cc
+	(transport_layer_sockets::accept): Rename local variable
+	`accept_fd' to avoid shadowing the `fd' field.
+
 2002-06-29  Pierre Humblet <pierre.humblet@ieee.org>   
 
 	* security.cc (extract_nt_dom_user): Check for all buffer overflows.
